공통 기능 구현